tests/errors/operand_type_53/e3.src
.IPPcode21

DEFVAR GF@a
MOVE GF@a int@5

GT GF@a GF@a string@5
